# AI-Therapy-v1

cbt_dbt_rag_assistant/: .env.example  .gitignore  PROGRESS_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml
cbt_dbt_rag_assistant/config/: logging.yaml  settings.py
cbt_dbt_rag_assistant/scripts/: run_ingestion.py  run_query.py
cbt_dbt_rag_assistant/src/core/: config.py
cbt_dbt_rag_assistant/src/core/interfaces/: __init__.py  data_loader.py  embedding_model.py  llm.py  vector_store.py
cbt_dbt_rag_assistant/src/core/models/: __init__.py  document.py
cbt_dbt_rag_assistant/src/infrastructure/data_loaders/: __init__.py  file_loader.py
cbt_dbt_rag_assistant/src/infrastructure/embedding/: __init__.py  sentence_transformer_embedder.py
cbt_dbt_rag_assistant/src/infrastructure/llm_providers/: __init__.py  ollama_provider.py
cbt_dbt_rag_assistant/src/infrastructure/vector_stores/: __init__.py  postgres_vector_store.py
cbt_dbt_rag_assistant/src/services/: __init__.py  ingestion_service.py  query_service.py
cbt_dbt_rag_assistant/src/ui/: __init__.py  app.py
